//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.server.storage;

option (type_url_prefix) = "type.spine3.org";
option (SPI_all) = true;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "RecordStorageProto";
option java_package = "org.spine3.server.storage";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "spine/annotations.proto";
import "spine/server/entity/entity_status.proto";

// Used to store entities in the record storage.
message EntityStorageRecord {
    option (SPI_type) = true;

    // The timestamp of the last entity modification.
    google.protobuf.Timestamp when_modified = 1;

    // The version of the entity.
    int32 version = 2;

    // The visibility status of the entity.
    entity.EntityStatus entity_status = 3;

    reserved 4 to 19;

    // The state of the entity.
    google.protobuf.Any state = 20;
}
